--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joi-to-json-schema",
+  "name": "@clubmed/joi-to-json-schema",
   "version": "0.0.2",
   "description": "Joi -> JSON Schema Converter (support joi v16.0)",
   "main": "lib/index.js",
